# CVPR24_PointSetReg

./: .gitignore  CMakeLists.txt  INys.h  README.md  demo.py  eff_kmeans.h  fuzzy_cluster_reg.h  io.h  kmeans.h  main.cpp  test_eigen_mkl.cpp  test_matlab.cpp
data/: tr_reg_057.ply  tr_reg_059.ply
matlab_code/: test_demo.m
matlab_code/src/: fuzzy_cluster_reg.m
matlab_code/utils/: INys.m  cpd_plot_iter.m  data_normalize_input.m  denormalize.m  eff_kmeans.m  elkan_kmeans.m  kmeans_comp.m  sqdist2.m
project_page/: index.html
pypointsetreg/: __init__.py  fuzzyclusterreg.py  fuzzyclusterreg_gpu.py
src/: INys.h  base.h  fuzzy_cluster_reg.h  kmeans.h  main.cpp  test_eigen_mkl.cpp
src_code/: base.h  fuzzy_cluster_reg.h  test_mkl.cpp
